$Id: History,v 1.14 2000-05-20 05:00:52 stanaka Exp $
--------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Example N03 History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

20th May 2000 Satoshi Tanaka 
- exNO3VisX.mac's are updated corresponding to development 
  of the new vis commands.
- The command /vis/add/trajectories is added to exNO3VisX.mac's.
  Instead the C++ method "DrawTrajectory()" is removed from 
  ExN03EventAction::EndOfEventAction(). 

19th May 2000 Satoshi Tanaka 
- g4.xrm (Xt resource file for UI) is renamed to g4Xt.xrm

11th May 2000 Satoshi Tanaka (examples-V01-01-03)
- Comments  in examples/novice/N03/exN03VisX.mac 's are
  updated for DAWN Version 3.85a
- Small changes to comments in SteppingVerbose.

25-02-00 H.Kurashige
- removed RhoZeroDefinition from PhysicsList 

10th November 1999  Satoshi Tanaka (examples-V00-01-12)
- novice/N03 is updated
- Vis macros for N03 are updated for the latest updation of vis commands
  (Introduction of /vis/viewer/update etc)                                     

09-11-99 Satoshi Tanaka (examples-V00-01-11)
  prerunN03.mac        : /vis/viewer/update  is appended
  src/ExN03RunAction.cc: /vis/scene/notifyHandlers  is in BeginOfRunAction()
                         /vis/viewer/update  is in EndOfRunAction()

14-08-99 Satoshi Tanaka
  TAG: examples-V00-01-02
  Visualization tutorial macros are committed.
  (exN03Vis0.mac,..., exN03Vis3.mac)
     