@@ -29,7 +29,7 @@
 # for drawing the tracks
 # if too many tracks cause core dump => storeTrajectory 0
 /tracking/storeTrajectory 1
-#/vis/scene/include/trajectories
+/vis/scene/include/trajectories
 #
 # Flush visualization
 /vis/viewer/update
