@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: ExN03EventAction.cc,v 1.9 2000-05-20 05:01:30 stanaka Exp $
+// $Id: ExN03EventAction.cc,v 1.10 2000-06-05 09:54:37 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -37,7 +37,7 @@
 
 ExN03EventAction::ExN03EventAction()
 :calorimeterCollID(-1),drawFlag("all"),eventMessenger(NULL),
- printModulo(10000)
+ printModulo(1)
 {
   eventMessenger = new ExN03EventActionMessenger(this);
 }
@@ -57,7 +57,7 @@ void ExN03EventAction::BeginOfEventAction(const G4Event* evt)
  G4int evtNb = evt->GetEventID();
  if (evtNb%printModulo == 0)
    { 
-    G4cout << "\n---> Event: " << evtNb << G4endl;
+    G4cout << "\n---> Begin of event: " << evtNb << G4endl;
     HepRandom::showEngineStatus();
    }
     
@@ -72,65 +72,41 @@ void ExN03EventAction::BeginOfEventAction(const G4Event* evt)
 
 void ExN03EventAction::EndOfEventAction(const G4Event* evt)
 {
-  G4int event_id = evt->GetEventID();
+  G4int evtNb = evt->GetEventID();
 
-  G4TrajectoryContainer * trajectoryContainer = evt->GetTrajectoryContainer();
-  G4int n_trajectories = 0;
-  if (trajectoryContainer) n_trajectories = trajectoryContainer->entries();
+  G4HCofThisEvent* HCE = evt->GetHCofThisEvent();
+  ExN03CalorHitsCollection* CHC = NULL;
+  G4int n_hit = 0;
+  G4double totEAbs=0, totLAbs=0, totEGap=0, totLGap=0;
+    
+  if (HCE) CHC = (ExN03CalorHitsCollection*)(HCE->GetHC(calorimeterCollID));
 
-  if (event_id < 100 || event_id%100 == 0) {
+  if (CHC)
+    {
+     n_hit = CHC->entries();
+     for (G4int i=0;i<n_hit;i++)
+	{
+	  totEAbs += (*CHC)[i]->GetEdepAbs(); 
+	  totLAbs += (*CHC)[i]->GetTrakAbs();
+	  totEGap += (*CHC)[i]->GetEdepGap(); 
+	  totLGap += (*CHC)[i]->GetTrakGap();
+	}
+     }	
+	  
+  if (evtNb%printModulo == 0) {
+    G4cout << "---> End of event: " << evtNb << G4endl;	
 
-    G4cout << ">>> Event " << evt->GetEventID() << G4endl;
-
-    G4cout << "    " << n_trajectories 
-	   << " trajectories stored in this event." << G4endl;
-
-    G4HCofThisEvent* HCE = evt->GetHCofThisEvent();
-    ExN03CalorHitsCollection* CHC = NULL;
-    if (HCE)
-      CHC = (ExN03CalorHitsCollection*)(HCE->GetHC(calorimeterCollID));
-
-    if (CHC)
-      {
-	int n_hit = CHC->entries();
-	G4cout << "     " << n_hit
-	       << " hits are stored in ExN03CalorHitsCollection." << G4endl;
-	G4double totEAbs=0, totLAbs=0, totEGap=0, totLGap=0;
-	for (int i=0;i<n_hit;i++)
-	  {
-	    totEAbs += (*CHC)[i]->GetEdepAbs(); 
-	    totLAbs += (*CHC)[i]->GetTrakAbs();
-	    totEGap += (*CHC)[i]->GetEdepGap(); 
-	    totLGap += (*CHC)[i]->GetTrakGap();
-	  }
-	G4cout
-	  << "   Absorber: total energy: " << G4std::setw(7) << G4BestUnit(totEAbs,"Energy")
-	  << "       total track length: " << G4std::setw(7) << G4BestUnit(totLAbs,"Length")
-	  << G4endl
-	  << "        Gap: total energy: " << G4std::setw(7) << G4BestUnit(totEGap,"Energy")
-	  << "       total track length: " << G4std::setw(7) << G4BestUnit(totLGap,"Length")
-	  << G4endl;           
-      }
-  }
-
-//////////////////////////////////////////////////////////
-// Note:
-//   The following commented-out lines are equivalent to 
-//   and have been replaced by the visualization command, 
-//   "/vis/add/trajectories".  
-//////////////////////////////////////////////////////////
-/***********************************
-  if(G4VVisManager::GetConcreteInstance())
-  {
-    for(G4int i=0; i<n_trajectories; i++) 
-         { G4Trajectory* trj = (G4Trajectory *)((*(evt->GetTrajectoryContainer()))[i]);
-           if (drawFlag == "all") trj->DrawTrajectory(50);
-           else if ((drawFlag == "charged")&&(trj->GetCharge() != 0.))
-                                  trj->DrawTrajectory(50); 
-         }
-  }
-***********************************/
-
+    G4cout
+       << "   Absorber: total energy: " << G4std::setw(7) << G4BestUnit(totEAbs,"Energy")
+       << "       total track length: " << G4std::setw(7) << G4BestUnit(totLAbs,"Length")
+       << G4endl
+       << "        Gap: total energy: " << G4std::setw(7) << G4BestUnit(totEGap,"Energy")
+       << "       total track length: " << G4std::setw(7) << G4BestUnit(totLGap,"Length")
+       << G4endl;
+	  
+    G4cout << "\n     " << n_hit
+	   << " hits are stored in ExN03CalorHitsCollection." << G4endl;  	     
+  }          
 }
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
